--- a/app/src/main/res/layout/item_image_pager.xml
+++ b/app/src/main/res/layout/item_image_pager.xml
@@ -5,7 +5,7 @@
     android:background="@color/bg_black"
     >
 
-    <uk.co.senab.photoview.PhotoView
+    <com.qianren.photoview.PhotoView
         android:id="@+id/photoview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
