--- a/app/src/main/res/layout/sticker_view_main.xml
+++ b/app/src/main/res/layout/sticker_view_main.xml
@@ -34,7 +34,7 @@
             android:textSize="18sp"/>
     </FrameLayout>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
